[gd_scene load_steps=7 format=3 uid="uid://b76a3pqgpeg1c"]

[ext_resource type="Script" path="res://src/scenes/Login.gd" id="1_ihx80"]
[ext_resource type="Texture2D" uid="uid://d2o1y27c8wm6k" path="res://art/login.png" id="2_dh101"]
[ext_resource type="Texture2D" uid="uid://bwgck6uqtlx64" path="res://art/box_login.png" id="3_mtn7h"]
[ext_resource type="FontFile" uid="uid://jx5vc8i6vlpd" path="res://fonts/DungeonFont.ttf" id="4_2dbwj"]
[ext_resource type="Texture2D" uid="uid://b8eiyfk34naym" path="res://art/button.png" id="5_o5oq6"]

[sub_resource type="LabelSettings" id="LabelSettings_48rdw"]
font = ExtResource("4_2dbwj")
font_size = 40

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ihx80")

[node name="Back" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -88.0
offset_right = 11.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dh101")
stretch_mode = 6

[node name="Box" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.3
anchor_right = 0.85
anchor_bottom = 0.7
offset_left = -4.00001
offset_top = -9.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mtn7h")
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = 32.0
offset_right = -36.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Header" type="Label" parent="Box/VBoxContainer"]
layout_mode = 2
text = "Welcome!
Please login or register"
label_settings = SubResource("LabelSettings_48rdw")
horizontal_alignment = 1

[node name="Input" type="VBoxContainer" parent="Box/VBoxContainer"]
layout_mode = 2

[node name="Username" type="LineEdit" parent="Box/VBoxContainer/Input"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Username"
draw_control_chars = true

[node name="Password" type="LineEdit" parent="Box/VBoxContainer/Input"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Password"
secret = true

[node name="Error" type="Label" parent="Box/VBoxContainer"]
layout_mode = 2
text = "evewve"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Box/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Login" type="Button" parent="Box/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Login"
icon = ExtResource("5_o5oq6")
text_overrun_behavior = 2
icon_alignment = 1
expand_icon = true

[node name="Register" type="Button" parent="Box/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Register"
icon = ExtResource("5_o5oq6")
text_overrun_behavior = 2
icon_alignment = 1
expand_icon = true

[node name="RegisterPOST" type="HTTPRequest" parent="."]

[node name="LoginPOST" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Box/VBoxContainer/Buttons/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Box/VBoxContainer/Buttons/Register" to="." method="_on_register_pressed"]
[connection signal="request_completed" from="RegisterPOST" to="." method="_on_register_post_request_completed"]
[connection signal="request_completed" from="LoginPOST" to="." method="_on_login_post_request_completed"]
